stable build with radius working

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+/*Base Application Styling*/
+
+body{
+    /*Black Application Background*/
+    background-color: rgb(4,5,7);
+    background-image: linear-gradient(90deg, rgba(4,5,7,1) 0%, rgba(5,11,17,1) 100%);
+
+    /*Default Text Settings*/
+    font-family: 'Jost', sans-serif;
+    text-align: center;
+    align-items: center;
+    color: aliceblue;
+
+    border: none;
+
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}    
+@keyframes fadeInAnimation{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/*Option Menu*/
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.option-menu{
+    padding: 15px;
 }
